--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,12 +1,3 @@
-body{
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-    padding: 10px
-}
-
-h1{
-    margin: 20px;
-}
-
 .tagUrl{
     line-height: 3rem;
     display: flex;
@@ -15,19 +6,12 @@ h1{
     margin: auto auto;
     width: 65%;
 }
-
-.pageTitle{
-    text-align: center;
-    margin: 40px;
-    font-size: 2rem;
-    border: 2px black;
-}
 .rankRoom{
     border: 2px solid black;
     text-align: center;
     line-height: 100px;
     margin: 15px auto;
-    height: 400px;
+    height: 70%;
     width: 65%
 }
 .input_tagUrl{
