[Change] Change tagUrl and btn_url two line to one line

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,8 +20,8 @@
 
   <div class="tagUrl">
     <form class="tagUrl" name="frm_tagUrl">
-      <input type="text" id="tagUrl" class="input_tagUrl" value="입장할 태그를 입력하세요">
-      <input type="button" class="btn_url" value="이동" onclick="getChatRoom()">                                    // TODO: 이거 위로 올려야함
+      <input type="text" id="tagUrl" class="input_tagUrl" placeholder="입장할 태그를 입력하세요">
+      <input type="button" class="btn_url" value="이동" onclick="getChatRoom()">
     </form>
   </div>
   <script language="javascript">
