--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,6 +1,6 @@
 .tagUrl{
     line-height: 3rem;
-    display: flex;
+    display: block;
     flex-direction: column;
     align-items: center;
     margin: auto auto;
@@ -17,10 +17,18 @@
 .input_tagUrl{
   border: 1px solid grey;
   height: 1.8rem;
+  width: 60%;
   margin: 0.5rem 0.5rem;
   display: inline-block;
+  float: left;
+    vertical-align: middle;
 }
 .btn_url{
   border-radius: 5px;
+  width: 20%;
+  height: 1.8rem;
+  margin: 0.5rem 0.5rem;
   display: inline-block;
+  float: left;
+  vertical-align: middle;
 }
