--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,17 +3,17 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="/stylesheets/basic.css" />
     <link rel="stylesheet" href="/stylesheets/index.css" />
     <script src="/javascripts/submitUrlHandler.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.3.min.js" ></script>
   </head>
   <body>
-  <header>
-    <div class="pageTitle">
-      <h1><%= title %></h1>
-    </div>
-  </header>
+  <%- include('header')%>
+
+  <div class="anc_tagList">
+    <a href="http://localhost:3000/tagList">더 보기..</a>
+  </div>
+
   <div class="rankRoom">
     <a href="#">hello</a>
   </div>
