--- a/public/stylesheets/basic.css
+++ b/public/stylesheets/basic.css
@@ -2,19 +2,46 @@
     margin: 0px;
     padding: 0px;
 }
+a{
+    text-decoration: unset;
+    color: unset;
+}
 html, body {
     height: 100%;
     padding: 0px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-
 h1{
-    margin: 1rem;
+    display: inline-block;
 }
 
+header{
+    align-items: center;
+    line-height: inherit;
+    display: table;
+    width: 100%;
+    height: 7.5rem;
+}
+.rightClass{
+    width: 28%;
+    height: 6rem;
+    display: table-cell;
+    vertical-align: middle;
+}
 .pageTitle{
+    width: 40%;
+    height: auto;
     text-align: center;
-    margin: 1rem;
+    vertical-align: middle;
     font-size: 2rem;
     border: 2px black;
+    color: black;
+    display: table-cell;
+}
+.loginStatus{
+    width: 28%;
+    text-align: center;
+    color: black;
+    display: table-cell;
+    vertical-align: middle;
 }
