[Add] Add files....

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,6 +15,9 @@
             <a href="/users/" + <%=uid%>>
                 <%= uid %>
             </a>
+            <a href="/users/logout">
+                로그아웃
+            </a>
         <%} else { %>
             <a href="/users/login">
                 로그인
