--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,15 +6,43 @@
     <link rel='stylesheet' href='/stylesheets/login.css' />
     <script type="text/javascript" src="/javascripts/submitUrlHandler.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.3.min.js" ></script>
+    <script src="/javascripts/btnAjaxHandler.js"></script>
 </head>
 <body>
     <%- include('header')%>
     <div class="loginTable">
         <div class="loginBox">
-            <form class="loginForm" name="frm_login">
+            <form class="loginForm" name="frm_login" method="post" action="http://localhost:3000/auth/local">
                 <input type="text" name="uid" placeholder="Username" id="uid">
-                <input type="password" name="password" placeholder="password" name="" id="password">
-                <input type="button" value="로그인" id="loginButton" onclick="submitUrlHandler('frm_login', 'post', 'http://localhost:3000/auth/local')">
+                <input type="password" name="password" placeholder="password" id="password">
+                <input type="button" value="로그인" id="loginBtn">
+                <script type="text/javascript">
+                    $(document).ready(function() {
+                        $('#loginBtn').click(
+                            function (){
+                                var _data = {
+                                    uid: $("#uid").val(),
+                                    password: $("#password").val()
+                                };
+                                $.ajax({
+
+                                    'type' : 'POST',
+                                    'url' : '/users/login',
+                                    'data' : _data,
+                                    'success' : function(json){
+                                        if(json['success'] === true){
+                                            alert('로그인 완료!!');
+                                            location.replace('http://localhost:3030/');
+                                        }else{
+                                            alert('로그인 실패');
+                                        }
+                                    }
+
+                                });
+                            }
+                        )
+                    })
+                </script>
             </form>
             <a href="/users/register"><button id="registerButton" onclick="registerButtonHandler()">회원가입</button></a>
             <a href="#"><input type="button" value="Facebook" id="loginFacebookButton"></a>
