--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,7 +34,7 @@
                                 'success' : function(json){
                                     if(json['success'] === true){
                                         alert('회원가입 완료!!');
-                                        document.cookie('token='+json.token);
+                                        document.cookie = 'token='+json['data']['token'] + ';path=/';
                                         location.replace('http://localhost:3030/');
                                     }else{
                                         alert('회원가입 실패');
