[Change] Change mypage content and css

--- a/views/myPage.ejs
+++ b/views/myPage.ejs
@@ -25,6 +25,186 @@
     </div>
     <div class="line"></div>
     <div class="userPostBox">
+        <a href="/posts/page/test" class="postItem">
+            <div class="postItem_image">
+                <img src="/images/post/test/XujRAcX9.jpg" alt="">
+            </div>
+            <div class="postItem_text">
+                <div class="postItem_textTitle">
+                    <h3 class="postTitle">타이틀 테스트</h3>
+                </div>
+                <div class="postItem_textContent">
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                </div>
+            </div>
+        </a>
+        <a href="/posts/page/test" class="postItem">
+            <div class="postItem_image">
+                <img src="/images/post/test/XujRAcX9.jpg" alt="">
+            </div>
+            <div class="postItem_text">
+                <div class="postItem_textTitle">
+                    <h3 class="postTitle">타이틀 테스트</h3>
+                </div>
+                <div class="postItem_textContent">
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                </div>
+            </div>
+        </a>
+        <a href="/posts/page/test" class="postItem">
+            <div class="postItem_image">
+                <img src="/images/post/test/XujRAcX9.jpg" alt="">
+            </div>
+            <div class="postItem_text">
+                <div class="postItem_textTitle">
+                    <h3 class="postTitle">타이틀 테스트</h3>
+                </div>
+                <div class="postItem_textContent">
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                </div>
+            </div>
+        </a>
+        <a href="/posts/page/test" class="postItem">
+            <div class="postItem_image">
+                <img src="/images/post/test/XujRAcX9.jpg" alt="">
+            </div>
+            <div class="postItem_text">
+                <div class="postItem_textTitle">
+                    <h3 class="postTitle">타이틀 테스트</h3>
+                </div>
+                <div class="postItem_textContent">
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                </div>
+            </div>
+        </a>
+        <a href="/posts/page/test" class="postItem">
+            <div class="postItem_image">
+                <img src="/images/post/test/XujRAcX9.jpg" alt="">
+            </div>
+            <div class="postItem_text">
+                <div class="postItem_textTitle">
+                    <h3 class="postTitle">타이틀 테스트</h3>
+                </div>
+                <div class="postItem_textContent">
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                </div>
+            </div>
+        </a>
+        <a href="/posts/page/test" class="postItem">
+            <div class="postItem_image">
+                <img src="/images/post/test/XujRAcX9.jpg" alt="">
+            </div>
+            <div class="postItem_text">
+                <div class="postItem_textTitle">
+                    <h3 class="postTitle">타이틀 테스트</h3>
+                </div>
+                <div class="postItem_textContent">
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                </div>
+            </div>
+        </a>
+        <a href="/posts/page/test" class="postItem">
+            <div class="postItem_image">
+                <img src="/images/post/test/XujRAcX9.jpg" alt="">
+            </div>
+            <div class="postItem_text">
+                <div class="postItem_textTitle">
+                    <h3 class="postTitle">타이틀 테스트</h3>
+                </div>
+                <div class="postItem_textContent">
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                </div>
+            </div>
+        </a>
+        <a href="/posts/page/test" class="postItem">
+            <div class="postItem_image">
+                <img src="/images/post/test/XujRAcX9.jpg" alt="">
+            </div>
+            <div class="postItem_text">
+                <div class="postItem_textTitle">
+                    <h3 class="postTitle">타이틀 테스트</h3>
+                </div>
+                <div class="postItem_textContent">
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                </div>
+            </div>
+        </a>
+        <a href="/posts/page/test" class="postItem">
+            <div class="postItem_image">
+                <img src="/images/post/test/XujRAcX9.jpg" alt="">
+            </div>
+            <div class="postItem_text">
+                <div class="postItem_textTitle">
+                    <h3 class="postTitle">타이틀 테스트</h3>
+                </div>
+                <div class="postItem_textContent">
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                </div>
+            </div>
+        </a>
+        <a href="/posts/page/test" class="postItem">
+            <div class="postItem_image">
+                <img src="/images/post/test/XujRAcX9.jpg" alt="">
+            </div>
+            <div class="postItem_text">
+                <div class="postItem_textTitle">
+                    <h3 class="postTitle">타이틀 테스트</h3>
+                </div>
+                <div class="postItem_textContent">
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                    <div class="postLine">내용전달 내용전달 내용전달...</div>
+                </div>
+            </div>
+        </a>
 
     </div>
 </div>
