--- a/public/stylesheets/myPage.css
+++ b/public/stylesheets/myPage.css
@@ -21,3 +21,32 @@
 .anc_userInfoEdit{
     text-align: right;
 }
+
+.userPostBox{
+    margin: auto auto;
+    vertical-align: center;
+    width: 60%;
+    height: 100%;
+    text-align: center;
+}
+.postItem{
+    vertical-align: middle;
+    margin: auto auto;
+    padding: 1rem;
+    display: inline-block;
+    height: 350px;
+}
+.postItem_image{
+    width: 200px;
+    height: 200px;
+    line-height: 200px;
+    overflow: hidden;
+    text-align: center;
+    vertical-align: center;
+}
+.postItem_image > img{
+    max-width:100%; max-height:100%;
+    vertical-align:middle;
+}
+.postItem_text{
+}
