[Add] Add relationship WasServer and ChatServer that WasServer allocate client to ChatServer and add cnt in redis Server

--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -10,7 +10,7 @@
 <%- include('header')%>
 <div class="container">
     <div class="postContainer">
-        a
+        <%= chatServerAdress %>
     </div>
     <div class="chatContainer">
         <div class="chatView">
