[Add] Add writeCard page

--- a/views/myPage.ejs
+++ b/views/myPage.ejs
@@ -24,8 +24,18 @@
         </div>
     </div>
     <div class="line"></div>
+    <div class="anc_Posting">
+        <button onclick="writePost()">
+            포스팅하기
+        </button>
+    </div>
+    <script>
+        function writePost(){
+            window.open('/users/writeCard', null, "width = 500, height = 300, location=no, resizable=no")
+        }
+    </script>
     <div class="userPostBox">
-        <a href="/posts/page/test" class="postItem">
+        <a href="/users/card/test" class="postItem">
             <div class="postItem_image">
                 <img src="/images/post/test/XujRAcX9.jpg" alt="">
             </div>
@@ -43,7 +53,7 @@
                 </div>
             </div>
         </a>
-        <a href="/posts/page/test" class="postItem">
+        <a href="/users/card/test" class="postItem">
             <div class="postItem_image">
                 <img src="/images/post/test/XujRAcX9.jpg" alt="">
             </div>
@@ -61,7 +71,7 @@
                 </div>
             </div>
         </a>
-        <a href="/posts/page/test" class="postItem">
+        <a href="/users/card/test" class="postItem">
             <div class="postItem_image">
                 <img src="/images/post/test/XujRAcX9.jpg" alt="">
             </div>
@@ -79,7 +89,7 @@
                 </div>
             </div>
         </a>
-        <a href="/posts/page/test" class="postItem">
+        <a href="/users/card/test" class="postItem">
             <div class="postItem_image">
                 <img src="/images/post/test/XujRAcX9.jpg" alt="">
             </div>
@@ -97,7 +107,7 @@
                 </div>
             </div>
         </a>
-        <a href="/posts/page/test" class="postItem">
+        <a href="/users/card/test" class="postItem">
             <div class="postItem_image">
                 <img src="/images/post/test/XujRAcX9.jpg" alt="">
             </div>
@@ -115,7 +125,7 @@
                 </div>
             </div>
         </a>
-        <a href="/posts/page/test" class="postItem">
+        <a href="/users/card/test" class="postItem">
             <div class="postItem_image">
                 <img src="/images/post/test/XujRAcX9.jpg" alt="">
             </div>
@@ -133,7 +143,7 @@
                 </div>
             </div>
         </a>
-        <a href="/posts/page/test" class="postItem">
+        <a href="/users/card/test" class="postItem">
             <div class="postItem_image">
                 <img src="/images/post/test/XujRAcX9.jpg" alt="">
             </div>
@@ -151,7 +161,7 @@
                 </div>
             </div>
         </a>
-        <a href="/posts/page/test" class="postItem">
+        <a href="/users/card/test" class="postItem">
             <div class="postItem_image">
                 <img src="/images/post/test/XujRAcX9.jpg" alt="">
             </div>
@@ -169,25 +179,7 @@
                 </div>
             </div>
         </a>
-        <a href="/posts/page/test" class="postItem">
-            <div class="postItem_image">
-                <img src="/images/post/test/XujRAcX9.jpg" alt="">
-            </div>
-            <div class="postItem_text">
-                <div class="postItem_textTitle">
-                    <h3 class="postTitle">타이틀 테스트</h3>
-                </div>
-                <div class="postItem_textContent">
-                    <div class="postLine">내용전달 내용전달 내용전달...</div>
-                    <div class="postLine">내용전달 내용전달 내용전달...</div>
-                    <div class="postLine">내용전달 내용전달 내용전달...</div>
-                    <div class="postLine">내용전달 내용전달 내용전달...</div>
-                    <div class="postLine">내용전달 내용전달 내용전달...</div>
-                    <div class="postLine">내용전달 내용전달 내용전달...</div>
-                </div>
-            </div>
-        </a>
-        <a href="/posts/page/test" class="postItem">
+        <a href="/users/card/test" class="postItem">
             <div class="postItem_image">
                 <img src="/images/post/test/XujRAcX9.jpg" alt="">
             </div>
